# discord_bot

./: .gitignore  README.md  env.py.example  example_bot.py  pyproject.toml  restart.sh
discord_bot/: javascript_exec.py  main.py  python_exec.py  shell_exec.py  shell_restart.py  show_log.py
discord_bot/util/: is_command_available.py  log.py  split_message.py
